# magenta-player

./: .gitignore  AGENTS.md  Makefile  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
docs/: README.md  build-system.md  cpp-swift-ffi.md  mrt2-architecture.dot  mrt2-integration.md  mrt2-prompt-and-drift.md  realtime-audio.md
mrt2-build/: .gitignore  Makefile  README.md
rust-player/: Cargo.toml  Makefile  README.md  build.rs
rust-player/src/: audio.rs  bridge.h  cli.rs  config.rs  ffi.rs  main.rs  tui.rs
swift-player/: .gitignore  DEVELOPMENT.md  LESSONS_LEARNED.md  Makefile  Package.swift  README.md
swift-player/Resources/: AppIcon.icns  Info.plist
swift-player/Tests/: MagentaPlayerTests.swift
swift-player/bridge/: magentart_bridge.mm
swift-player/bridge/include/: magentart_bridge.h
swift-player/src/: MagentaPlayerApp.swift  Managers.swift  ModelDownloader.swift  Models.swift
swift-player/src/Views/: PlayerView.swift  ViewExtensions.swift
